src/test/resources/testinput/parsable/symtab/invalid_coco/quantifiers14.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl quantifiers14 {
  inv ListQuantor:
    forall List<Person> lp: lp.size != 5;
}
